added additional comments

--- a/unit-2_project_submission/chipotle_clb_submission.ipynb
+++ b/unit-2_project_submission/chipotle_clb_submission.ipynb
@@ -138,9 +138,9 @@
    },
    "outputs": [],
    "source": [
-    "# add an additional column that converts the item_price string into a float\n",
+    "# add an additional column that converts the item_price string into a float for easier calculation\n",
     "data['price_numeric'] = [float(x.replace('$', '')) for x in data.item_price]\n",
-    "# convert quantity column to numeric dtype\n",
+    "# convert quantity column to numeric dtype instead of object dtype\n",
     "data.quantity = pd.to_numeric(data.quantity)\n",
     "data.dtypes"
    ]
@@ -154,7 +154,7 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Since the item_price column is ACTUALLY the order_price, we do not need to take quantity into\n",
+    "Since the item_price column is ACTUALLY the order_price (not the item unit price), we do not need to take quantity into\n",
     "account when calculating the average order price.  Instead, we can just consider the mean value\n",
     "of all order prices (e.g. the mean of the item_price column).  I am calculating the item unit_price\n",
     "for each order and storing that into the unit_price column in case it is needed.\n",
@@ -236,6 +236,7 @@
    "outputs": [],
    "source": [
     "# Subset order data into only orders that contain 'burrito' in the name and store a copy\n",
+    "# str.lower() is included to simplify the contains method\n",
     "burrito_orders = data[(data.item_name.str.lower().str.contains('burrito'))].copy()"
    ]
   },
@@ -258,10 +259,10 @@
    },
    "outputs": [],
    "source": [
-    "# split choice_description on commas to create lists of each individual topping\n",
+    "# split choice_description on commas to create lists where each element is an individual topping\n",
     "# Store the length of this list as the number of toppings for each order\n",
     "burrito_orders['num_toppings'] = [len(x.split(',')) for x in burrito_orders.choice_description]\n",
-    "# Calculate the average number of toppings per burrito\n",
+    "# Calculate the average number of toppings per burrito using .mean()\n",
     "print \"The average number of toppings per burrito is: \", burrito_orders.num_toppings.mean()"
    ]
   },
@@ -290,7 +291,8 @@
     "chip_orders = data[(data.item_name.str.lower().str.contains('chip'))].copy()\n",
     "# Create a dictionary of chip orders grouped by name with values as quantity sum\n",
     "chip_counts = dict(chip_orders.groupby('item_name').quantity.sum())\n",
-    "chip_counts"
+    "chip_counts\n",
+    "# Currently, this does not consider 'Side of chips' and 'Chips' as the same thing. These are treated as distinct orders"
    ]
   },
   {
