set plotting style

--- a/final_project/eda.ipynb
+++ b/final_project/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 143,
    "metadata": {
     "collapsed": false
    },
@@ -16,7 +16,9 @@
     "import seaborn as sns\n",
     "from urllib import urlopen\n",
     "from bs4 import BeautifulSoup\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "plt.style.use('fivethirtyeight')"
    ]
   },
   {
