--- a/final_project/eda.ipynb
+++ b/final_project/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -16,6 +16,7 @@
     "import seaborn as sns\n",
     "from urllib import urlopen\n",
     "from bs4 import BeautifulSoup\n",
+    "import codecs\n",
     "%matplotlib inline\n",
     "\n",
     "plt.style.use('fivethirtyeight')"
@@ -23,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -327,7 +328,7 @@
        "max                 NaN     NaN           NaN  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -362,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -381,6 +382,7 @@
        "4.8%      72\n",
        "5.8%      67\n",
        "5.6%      66\n",
+       "???       62\n",
        "5.1%      62\n",
        "6.2%      60\n",
        "5.3%      60\n",
@@ -391,16 +393,15 @@
        "6.8%      52\n",
        "5.4%      50\n",
        "7.5%      43\n",
+       "4.2%      38\n",
        "6.3%      38\n",
        "4.0%      38\n",
-       "4.2%      38\n",
        "7.2%      37\n",
        "9.9%      35\n",
        "5.9%      34\n",
        "4.6%      32\n",
        "6.9%      31\n",
        "8.5%      26\n",
-       "6.7%      25\n",
        "        ... \n",
        "9.5%       9\n",
        "4.1%       9\n",
@@ -410,32 +411,32 @@
        "3.5%       6\n",
        "3.8%       6\n",
        "8.8%       6\n",
-       "9.3%       5\n",
        "9.6%       5\n",
        "9.7%       5\n",
+       "9.3%       5\n",
        "7.6%       5\n",
        "8.6%       4\n",
        "8.1%       4\n",
        "3.7%       4\n",
-       "9.1%       3\n",
-       "3.2%       3\n",
-       "9.8%       3\n",
        "8.4%       3\n",
-       "8.9%       2\n",
+       "9.8%       3\n",
+       "3.2%       3\n",
+       "9.1%       3\n",
        "2.7%       2\n",
-       "10.4%      1\n",
-       "9.4%       1\n",
-       "10.0%      1\n",
-       "12.8%      1\n",
-       "3.4%       1\n",
-       "0.1%       1\n",
-       "12.5%      1\n",
-       "2.8%       1\n",
+       "8.9%       2\n",
        "12.0%      1\n",
-       "Name: abv, Length: 74, dtype: int64"
+       "12.8%      1\n",
+       "0.1%       1\n",
+       "2.8%       1\n",
+       "9.4%       1\n",
+       "3.4%       1\n",
+       "10.0%      1\n",
+       "12.5%      1\n",
+       "10.4%      1\n",
+       "Name: abv, Length: 75, dtype: int64"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,25 +447,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "craft_cans = craft_cans[(craft_cans.abv != '???')].copy()"
+    "craft_cans = craft_cans[(craft_cans.abv != '???')].copy()\n",
+    "\n",
+    "states = []\n",
+    "for location in craft_cans.brewery_location:\n",
+    "    state = location.split(', ')[1]\n",
+    "    states.append(state)\n",
+    "craft_cans['state'] = states"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CO    250\n",
+       "CA    182\n",
+       "MI    151\n",
+       "IN    137\n",
+       "TX    126\n",
+       "OR    125\n",
+       "PA     97\n",
+       "IL     92\n",
+       "WI     85\n",
+       "MA     82\n",
+       "NY     73\n",
+       "WA     68\n",
+       "FL     56\n",
+       "MN     55\n",
+       "NC     55\n",
+       "OH     51\n",
+       "AZ     44\n",
+       "VA     44\n",
+       "MO     40\n",
+       "MT     39\n",
+       "IA     30\n",
+       "ID     30\n",
+       "RI     29\n",
+       "HI     27\n",
+       "VT     27\n",
+       "ME     27\n",
+       "CT     27\n",
+       "UT     26\n",
+       "AK     25\n",
+       "KS     24\n",
+       "MD     21\n",
+       "KY     21\n",
+       "NE     21\n",
+       "OK     19\n",
+       "LA     19\n",
+       "GA     16\n",
+       "WY     15\n",
+       "SC     14\n",
+       "NM     13\n",
+       "MS     11\n",
+       "NV     10\n",
+       "AL     10\n",
+       "DC      8\n",
+       "NJ      8\n",
+       "NH      8\n",
+       "SD      7\n",
+       "TN      6\n",
+       "AR      5\n",
+       "ND      3\n",
+       "WV      2\n",
+       "DE      1\n",
+       "Name: state, dtype: int64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "craft_cans.state.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "abv_float = [float(x.replace('%','')) for x in craft_cans.abv]\n",
-    "craft_cans['abv_clean'] = abv_float"
+    "craft_cans['abv_clean'] = abv_float\n",
+    "\n",
+    "craft_cans.to_csv('./data/beers.csv',encoding='utf-8')"
    ]
   },
   {
