--- a/final_project/eda.ipynb
+++ b/final_project/eda.ipynb
@@ -464,75 +464,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "CO    250\n",
-       "CA    182\n",
-       "MI    151\n",
-       "IN    137\n",
-       "TX    126\n",
-       "OR    125\n",
-       "PA     97\n",
-       "IL     92\n",
-       "WI     85\n",
-       "MA     82\n",
-       "NY     73\n",
-       "WA     68\n",
-       "FL     56\n",
-       "MN     55\n",
-       "NC     55\n",
-       "OH     51\n",
-       "AZ     44\n",
-       "VA     44\n",
-       "MO     40\n",
-       "MT     39\n",
-       "IA     30\n",
-       "ID     30\n",
-       "RI     29\n",
-       "HI     27\n",
-       "VT     27\n",
-       "ME     27\n",
-       "CT     27\n",
-       "UT     26\n",
-       "AK     25\n",
-       "KS     24\n",
-       "MD     21\n",
-       "KY     21\n",
-       "NE     21\n",
-       "OK     19\n",
-       "LA     19\n",
-       "GA     16\n",
-       "WY     15\n",
-       "SC     14\n",
-       "NM     13\n",
-       "MS     11\n",
-       "NV     10\n",
-       "AL     10\n",
-       "DC      8\n",
-       "NJ      8\n",
-       "NH      8\n",
-       "SD      7\n",
-       "TN      6\n",
-       "AR      5\n",
-       "ND      3\n",
-       "WV      2\n",
-       "DE      1\n",
-       "Name: state, dtype: int64"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "craft_cans.state.value_counts()"
+    "craft_cans.state.value_counts()\n",
+    "craft_cans = pd.concat([craft_cans, pd.get_dummies(craft_cans.state, prefix='state_')])"
    ]
   },
   {
@@ -544,8 +483,17 @@
    "outputs": [],
    "source": [
     "abv_float = [float(x.replace('%','')) for x in craft_cans.abv]\n",
-    "craft_cans['abv_clean'] = abv_float\n",
-    "\n",
+    "craft_cans['abv_clean'] = abv_float"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "craft_cans.to_csv('./data/beers.csv',encoding='utf-8')"
    ]
   },
