--- a/final_project/credit_card_fraud.ipynb
+++ b/final_project/credit_card_fraud.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import confusion_matrix, roc_curve\n",
+    "from sklearn.metrics import confusion_matrix, roc_curve, roc_auc_score\n",
     "\n",
     "plt.style.use('fivethirtyeight')\n",
     "%matplotlib inline"
